--- a/index.html
+++ b/index.html
@@ -1,38 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SF3D - Landing</title>
-        <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
-        
-        <link rel="stylesheet" href="css/marquee.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/hamburgermenu.js" defer></script>
-    </head>
-    <body>
-        <header>
-            <div class="menu-btn" onclick="toggleMenu()">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <img src="resources/SF3D.svg" alt="SF3D Logo" class="center-svg">
-        </header>
-        <main>
-            <div class="marquee">
-                <span style="font-size: 35px;" class="bt">Everything is atleast 10% off!</span>
-            </div>
-            <br>
-            <canvas id="canvas"></canvas> <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> <script src="https://threejs.org/examples/js/loaders/GLTFLoader.js"></script> <script> let scene, camera, renderer, model; function init() { // Create scene scene = new THREE.Scene(); // Create camera camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000); camera.position.z = 5; // Create renderer renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas') }); renderer.setSize(window.innerWidth, window.innerHeight); document.body.appendChild(renderer.domElement); // Load the model const loader = new THREE.GLTFLoader(); loader.load('/resources/amonguskeycap.stl', function(gltf) { model = gltf.scene; scene.add(model); animate(); }, undefined, function(error) { console.error(error); }); window.addEventListener('resize', onWindowResize, false); document.addEventListener('mousemove', onDocumentMouseMove, false); } function onWindowResize() { camera.aspect = window.innerWidth / window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth, window.innerHeight); } function onDocumentMouseMove(event) { if (model) { model.rotation.y = (event.clientX / window.innerWidth) * 2 * Math.PI; model.rotation.x = (event.clientY / window.innerHeight) * 2 * Math.PI; } } function animate() { requestAnimationFrame(animate); renderer.render(scene, camera); } init(); </script>
-        </main>
-    
-        <div class="menu" id="menu">
-            <a href="index.html">Landing</a>
-            <a href="/html/shop.html">Shop</a>
-            <a href="/html/news.html">News</a>
-            <a href="/html/about.html">About Us</a>
-            <a href="/html/contact.html">Contact Us</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SF3D - Landing</title>
+    <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/marquee.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/hamburgermenu.js" defer></script>
+</head>
+<body>
+    <header>
+        <div class="menu-btn" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-    </body>
+        <img src="resources/SF3D.svg" alt="SF3D Logo" class="center-svg">
+    </header>
+    <main>
+        <div class="marquee">
+            <span style="font-size: 35px;" class="bt">Everything is at least 10% off!</span>
+        </div>
+        <br>
+        <canvas id="canvas"></canvas>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+        <script src="https://threejs.org/examples/js/loaders/STLLoader.js"></script>
+        <script>
+            let scene, camera, renderer, model;
+
+            function init() {
+                scene = new THREE.Scene();
+                camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+                camera.position.z = 5;
+
+                renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas') });
+                renderer.setSize(window.innerWidth, window.innerHeight);
+                document.body.appendChild(renderer.domElement);
+
+                const loader = new THREE.STLLoader();
+                loader.load('/resources/amonguskeycap.stl', function (geometry) {
+                    const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+                    model = new THREE.Mesh(geometry, material);
+                    scene.add(model);
+                    animate();
+                }, undefined, function (error) {
+                    console.error(error);
+                });
+
+                window.addEventListener('resize', onWindowResize, false);
+                document.addEventListener('mousemove', onDocumentMouseMove, false);
+            }
+
+            function onWindowResize() {
+                camera.aspect = window.innerWidth / window.innerHeight;
+                camera.updateProjectionMatrix();
+                renderer.setSize(window.innerWidth, window.innerHeight);
+            }
+
+            function onDocumentMouseMove(event) {
+                if (model) {
+                    model.rotation.y = (event.clientX / window.innerWidth) * 2 * Math.PI;
+                    model.rotation.x = (event.clientY / window.innerHeight) * 2 * Math.PI;
+                }
+            }
+
+            function animate() {
+                requestAnimationFrame(animate);
+                renderer.render(scene, camera);
+            }
+
+            init();
+        </script>
+    </main>
+    <div class="menu" id="menu">
+        <a href="index.html">Landing</a>
+        <a href="/html/shop.html">Shop</a>
+        <a href="/html/news.html">News</a>
+        <a href="/html/about.html">About Us</a>
+        <a href="/html/contact.html">Contact Us</a>
+    </div>
+</body>
 </html>
