--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SF3D - Landing</title>
     <link rel="icon" href="/resources/SF3D.svg" type="image/x-icon">
+    
     <link rel="stylesheet" href="css/marquee.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/hamburgermenu.js" defer></script>
+    <script type="module" src="js/threejsmain.js"><script>
 </head>
 <body>
     <header>
@@ -23,63 +25,7 @@
             <span style="font-size: 35px;" class="bt">Everything is at least 10% off!</span>
         </div>
         <br>
-        <canvas id="canvas"></canvas>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-        <script src="https://threejs.org/examples/js/loaders/STLLoader.js"></script>
-        <script>
-            let scene, camera, renderer, model;
-
-            function init() {
-                scene = new THREE.Scene();
-                camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-                camera.position.z = 5;
-
-                renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('canvas') });
-                renderer.setSize(window.innerWidth, window.innerHeight);
-                document.body.appendChild(renderer.domElement);
-
-                // Add lighting
-                const ambientLight = new THREE.AmbientLight(0x404040); // Soft white light
-                scene.add(ambientLight);
-
-                const directionalLight = new THREE.DirectionalLight(0xffffff, 1); // Strong white light
-                directionalLight.position.set(5, 5, 5).normalize();
-                scene.add(directionalLight);
-
-                const loader = new THREE.STLLoader();
-                loader.load('/resources/amonguskeycap.stl', function (geometry) {
-                    const material = new THREE.MeshPhongMaterial({ color: 0x00ff00 });
-                    model = new THREE.Mesh(geometry, material);
-                    scene.add(model);
-                    animate();
-                }, undefined, function (error) {
-                    console.error(error);
-                });
-
-                window.addEventListener('resize', onWindowResize, false);
-                document.addEventListener('mousemove', onDocumentMouseMove, false);
-            }
-
-            function onWindowResize() {
-                camera.aspect = window.innerWidth / window.innerHeight;
-                camera.updateProjectionMatrix();
-                renderer.setSize(window.innerWidth, window.innerHeight);
-            }
-
-            function onDocumentMouseMove(event) {
-                if (model) {
-                    model.rotation.y = (event.clientX / window.innerWidth) * 2 * Math.PI;
-                    model.rotation.x = (event.clientY / window.innerHeight) * 2 * Math.PI;
-                }
-            }
-
-            function animate() {
-                requestAnimationFrame(animate);
-                renderer.render(scene, camera);
-            }
-
-            init();
-        </script>
+        <div id="modelContainer"></div>
     </main>
     <div class="menu" id="menu">
         <a href="index.html">Landing</a>
